<resources>
    <string name="app_name">Mind Guru</string>
    <string name="hello_blank_fragment">Hello, Blank Fragment!</string>
    <string name="new_profile_button">Create New Profile</string>
    <string name="register_text">No account yet? Register now!</string>
    <string name="login_text">or log in here:</string>
    <string name="login_button">Login</string>
    <string name="create_profile_button">Create New Profile</string>
    <string name="cancel_button">Cancel</string>
    <string name="EmailEdit">EMail…</string>
    <string name="login_btn_text">Login</string>
    <string name="password_editText">Password…</string>
    <string name="question_text">Question here?</string>
    <string name="answer_c">Option C</string>
    <string name="welcome_text_title">Welcome to Mind Guru!</string>
    <string name="welcome_text_body">Ready to put your knowledge to the test?</string>
    <string name="create_profile_text">Then just create your profile here:</string>
    <string name="ok_btn">OK</string>
    <string name="username_ET">Username...</string>
    <string name="user_points">Total points:</string>
    <string name="current_question_points">Current question:</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="userinfo_TV">UserInfo</string>
    <string name="category_sample_text">category</string>
    <string name="choose_category_text">In which category do you want to test your knowledge?</string>
    <string name="choose_difficulty_level_text">Great! Now choose the difficulty level!</string>
    <string name="diff_easy">easy</string>
    <string name="diff_medium">medium</string>
    <string name="hard">hard</string>
    <string name="difficulty_text">difficulty</string>
    <string name="your_profile_text">Your profile</string>
    <string name="password_repeat_text">Password repeat...</string>
    <string name="logout_button_text">Logout</string>
    <string name="exit_app_button_text">Exit App</string>
</resources>