<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_transparent"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailEdit"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_editText"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/login_btn_text"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Noch keinen Account? Jetzt registrieren!"
            android:gravity="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</FrameLayout>