<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_gradient"
    tools:context=".ui.HomeFragment">

    <ImageView
        android:id="@+id/logoTV"
        android:layout_width="248dp"
        android:layout_height="248dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:text="@string/choose_category_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoTV" />

    <androidx.cardview.widget.CardView
        android:id="@+id/selectedCategoryCV"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryTV">

        <TextView
            android:id="@+id/selectedCategoryTV"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/category_sample_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="gone" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategories"
        android:layout_width="254dp"
        android:layout_height="164dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/frame_background"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryTV"
        tools:listitem="@layout/item_category" />

    <TextView
        android:id="@+id/difficultyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="250dp"
        android:text="@string/choose_difficulty_level_text"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedCategoryCV" />

    <androidx.cardview.widget.CardView
        android:id="@+id/selectedDifficultyCV"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficultyTV">

    <TextView
        android:id="@+id/selectedDifficultyTV"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/category_sample_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/frame_background"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:padding="16dp"
        android:paddingTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficultyTV"
        tools:listitem="@layout/item_difficulty" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:elevation="16dp"
        android:text="@string/logout_button_text"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="6"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exit_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="16dp"
        android:text="@string/exit_app_button_text"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="6"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logout_button" />

</androidx.constraintlayout.widget.ConstraintLayout>